Ingress setup/Functionality-test/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-demo
  name: nginx-demo
spec:
  selector:
    app: nginx-demo
  ports:
    - nodePort: 32001
      port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
